--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -22,7 +22,8 @@ const archivosAnimaciones = [
   'animaciones/animacion1.js',
   'animaciones/animacion2.js',
   'animaciones/animacion3.js',
-  'animaciones/animacion4.js'
+  'animaciones/animacion4.js',
+  'animaciones/animacion5.js
 ];
 
 let currentSketch;
