--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -23,7 +23,7 @@ const archivosAnimaciones = [
   'animaciones/animacion2.js',
   'animaciones/animacion3.js',
   'animaciones/animacion4.js',
-  'animaciones/animacion5.js
+  'animaciones/animacion5.js'
 ];
 
 let currentSketch;
