--- a/articulos-publicos.html
+++ b/articulos-publicos.html
@@ -68,7 +68,8 @@
 
 <main>
   <div class="articulos">
-    <a href="polis-paint.html">Nuntius Fluctibus Commissus (mensaje al mar)</a>
+    <a href="notasmar.html">Algunas notas del mar</a>
+    <a href="polis-paint.html">Nuntius Fluctibus Commissus (mensaje confiado a las olas)</a>
     <a href="apollinareefimero.html">Apollinare Efímero</a>
   </div>
 
