--- a/notasmar.html
+++ b/notasmar.html
@@ -131,7 +131,7 @@
     </div>
 
     <!-- Texto fijo hasta que toques -->
-    <div id="start-hint">Toca la pantalla para escuchar</div>
+    <div id="start-hint">Toca la pantalla para escuchar, desactiva el silencio en tu movil</div>
 
     <div id="nav-footer">
         <a href="articulos-publicos.html">Volver a Artículos Públicos</a>
