--- a/notasmarconmar.html
+++ b/notasmarconmar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- Viewport ajustado para que no haga zoom extraño en móvil -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Algunas notas del mar - Editorial I.PESOA</title>
+    <title>Algunas notas del mar (con mar) - Editorial I.PESOA</title>
     
     <link rel="stylesheet" href="style.css">
     
