--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>i.pesoa</h1>
+<header>
+    <h1>I.PESOA</h1>
     <h2>EDITORIAL</h2>
-  </header>
+</header>
 
-  <main>
-    <button id="random-btn">Random</button>
+<main>
+    <button id="random-btn">R A N D O M</button>
 
     <div class="cartel-container">
-      <img id="cartel" src="" alt="Cartel">
-      <div class="links">
-        <a id="link-revista" href="#" target="_blank">Ver revista</a>
-        <a id="link-dina3" href="#">Comprar cartel</a>
-      </div>
+        <img id="cartel" src="" alt="Cartel">
+        <div id="hover-text" class="hover-text"></div>
+        <div class="links">
+            <a id="link-revista" href="#" target="_blank"></a>
+            <a id="link-dina3" href="#">Dina3</a>
+        </div>
     </div>
-  </main>
+</main>
 
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
