--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="hover-text" class="hover-text"></div>
         <div class="links">
             <a id="link-revista" href="#" target="_blank"></a>
-            <a id="link-dina3" href="#">Dina3</a>
+            <a id="link-dina3" href="#">Versión en Papel</a>
         </div>
     </div>
 </main>
