--- a/pedido.html
+++ b/pedido.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <header>
-    <h1>Encargar Cartel</h1>
+    <h1>I.PESOA</h1>
+    <h2>EDITORIAL</h2>
 </header>
+
 
 <main>
     <img id="cartel-img" src="" alt="Cartel">
