--- a/revista.html
+++ b/revista.html
@@ -16,6 +16,9 @@
     <p id="descripcion"></p>
     <p>Precio: <span id="precio"></span></p>
     <a id="paypal-link" href="#" target="_blank">Comprar por PayPal</a>
+    <div class="volver">
+        <a href="index.html"><button>Volver al inicio</button></a>
+    </div>
 </main>
 
 <script src="js/revista.js"></script>
