--- a/pedido.html
+++ b/pedido.html
@@ -16,6 +16,9 @@
     <img id="cartel-img" src="" alt="Cartel">
     <p>Precio: <span id="precio"></span></p>
     <a id="paypal-link" href="#" target="_blank">Pagar por PayPal</a>
+    <div class="volver">
+        <a href="index.html"><button>Volver al inicio</button></a>
+    </div>
 </main>
 
 <script src="js/pedido.js"></script>
