--- a/pedido.html
+++ b/pedido.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Pedido de Cartel</title>
+<title>Pedido - i.pesoa</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,11 +11,16 @@
     <h2>EDITORIAL</h2>
 </header>
 
-
 <main>
-    <img id="cartel-img" src="" alt="Cartel">
-    <p>Precio: <span id="precio"></span></p>
-    <a id="paypal-link" href="#" target="_blank">Pagar por PayPal</a>
+    <div class="cartel-container">
+        <div class="imagen-container">
+            <img id="cartel-img" src="" alt="Cartel">
+        </div>
+
+        <p>Precio: <span id="precio"></span></p>
+        <a id="paypal-link" href="#" target="_blank">Pagar por PayPal</a>
+    </div>
+
     <div class="volver">
         <a href="index.html"><button>Volver al inicio</button></a>
     </div>
