--- a/revista.html
+++ b/revista.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Revista</title>
+<title>Revista - i.pesoa</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,10 +12,21 @@
 </header>
 
 <main>
-    <img id="fanzine-img" src="" alt="Fanzine">
-    <p id="descripcion"></p>
-    <p>Precio: <span id="precio"></span></p>
-    <a id="paypal-link" href="#" target="_blank">Comprar por PayPal</a>
+    <div class="cartel-container">
+        <div class="imagen-container">
+            <img id="fanzine-img" src="" alt="Fanzine">
+        </div>
+
+        <div class="links">
+            <a id="link-revista" href="#" target="_blank">Revista</a>
+            <a id="link-dina3" href="#">Versión en Papel</a>
+        </div>
+
+        <p id="descripcion"></p>
+        <p>Precio: <span id="precio"></span></p>
+        <a id="paypal-link" href="#" target="_blank">Comprar por PayPal</a>
+    </div>
+
     <div class="volver">
         <a href="index.html"><button>Volver al inicio</button></a>
     </div>
