--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <button id="random-btn">R A N D O M</button>
 
     <div class="cartel-container">
-        <img id="cartel" src="" alt="Cartel">
-        <div id="hover-text" class="hover-text"></div>
+        <div class="imagen-container">
+            <img id="cartel" src="" alt="Cartel">
+            <div id="hover-text" class="hover-text"></div>
+        </div>
         <div class="links">
             <a id="link-revista" href="#" target="_blank"></a>
             <a id="link-dina3" href="#">Versión en Papel</a>
