--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>i.pesoa - Editorial</title>
+<title>I.PESOA - Editorial</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
