--- a/pedido.html
+++ b/pedido.html
@@ -5,7 +5,6 @@
 <title>Pedido - i.pesoa</title>
 <link rel="stylesheet" href="css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 <body>
 <header>
@@ -19,7 +18,7 @@
             <img id="cartel-img" src="" alt="Cartel">
         </div>
 
-        <p>Precio: <span id="precio"></span></p>
+        <p id="texto-impresion"></p>
         <a id="paypal-link" href="#" target="_blank">Pagar por PayPal</a>
     </div>
 
