--- a/pedido.html
+++ b/pedido.html
@@ -20,19 +20,13 @@
                 <img id="cartel" src="" alt="Cartel">
                 <div id="hover-text" class="hover-text"></div>
             </div>
-            <div class="links">
-                <a id="link-revista" href="#">-</a>
-                <a id="link-dina3" href="#">Versión en Papel</a>
+            <a id="link-compra" href="#">Realizar compra</a>
+            <div class="volver">
+                <a href="index.html">Volver</a>
             </div>
-            <a href="#" class="button">Pagar por PayPal</a>
-        </section>
-        <section class="back-to-home">
-            <a href="index.html">Volver al inicio</a>
         </section>
     </main>
 
-    <footer>
-    </footer>
     <script src="js/pedido.js"></script>
 </body>
 </html>
