--- a/revista.html
+++ b/revista.html
@@ -17,22 +17,16 @@
     <main>
         <section class="product-details">
             <div class="imagen-container">
-                <img id="cartel" src="" alt="Fanzine">
+                <img id="cartel" src="" alt="Revista">
                 <div id="hover-text" class="hover-text"></div>
             </div>
-            <div class="links">
-                <a id="link-revista" href="#">-</a>
-                <a id="link-dina3" href="#">Versión en Papel</a>
+            <a id="link-compra" href="#">Realizar compra</a>
+            <div class="volver">
+                <a href="index.html">Volver</a>
             </div>
-            <a href="#" class="button">Comprar por PayPal</a>
-        </section>
-        <section class="back-to-home">
-            <a href="index.html">Volver al inicio</a>
         </section>
     </main>
 
-    <footer>
-    </footer>
     <script src="js/revista.js"></script>
 </body>
 </html>
