--- a/pedido.html
+++ b/pedido.html
@@ -15,14 +15,39 @@
     </header>
 
     <main>
-        <section class="product-details">
-            <div class="imagen-container">
-                <img id="cartel" src="" alt="Cartel">
-                <div id="hover-text" class="hover-text"></div>
+        <section class="pedido-container">
+            <div class="pedido-content">
+                <!-- Parte superior: imagen + texto -->
+                <div class="pedido-top">
+                    <div class="pedido-imagen">
+                        <img id="cartel" src="" alt="Cartel">
+                    </div>
+                    <div class="pedido-info" id="texto-info"></div>
+                </div>
+                
+                <!-- Formulario -->
+                <form id="pedido-form" class="pedido-form">
+                    <div class="campo">
+                        <label for="nombre">Nombre completo</label>
+                        <input type="text" id="nombre" name="nombre" required>
+                    </div>
+                    <div class="campo">
+                        <label for="direccion">Dirección de envío</label>
+                        <input type="text" id="direccion" name="direccion" required>
+                    </div>
+                    <div class="campo">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                </form>
             </div>
-            <a id="link-compra" href="#">Realizar compra</a>
-            <div class="volver">
-                <a href="index.html">Volver</a>
+            
+            <!-- Botones FUERA del recuadro -->
+            <div class="pedido-buttons">
+                <button type="button" id="btn-compra">Realizar compra</button>
+                <div class="volver">
+                    <a href="index.html">Volver</a>
+                </div>
             </div>
         </section>
     </main>
