--- a/pedido.html
+++ b/pedido.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="campo">
                         <label for="direccion">Dirección de envío</label>
-                        <input type="text" id="direccion" name="direccion" required>
+                        <textarea id="direccion" name="direccion" rows="3" required></textarea>
                     </div>
                     <div class="campo">
                         <label for="email">Email</label>
