--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+    
 <body>
 <header>
     <h1>I.PESOA</h1>
@@ -29,5 +30,14 @@
 </main>
 
 <script src="js/main.js"></script>
+<footer class="site-footer">
+        <p class="copyright">© 2026 ipesoa editorial. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://instagram.com/ipesoaeditorial" target="_blank">Instagram</a>
+            <a href="https://tiktok.com/@ipesoaeditorial" target="_blank">Tiktok</a>
+        </div>
+    </footer>
+
+    <script src="js/main.js"></script>   
 </body>
 </html>
