--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-    
+
 <body>
 <header>
     <h1>I.PESOA</h1>
@@ -23,7 +23,7 @@
             <div id="hover-text" class="hover-text"></div>
         </div>
         <div class="links">
-            <a id="link-revista" href="#" target="_blank"></a>
+            <a id="link-revista" href="#"></a>
             <a id="link-dina3" href="#">Versión en Papel</a>
         </div>
     </div>
@@ -38,6 +38,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>   
+    <script src="js/main.js"></script>
 </body>
 </html>
